fixed broken styles

--- a/Ecothon.Web/wwwroot/css/main.css
+++ b/Ecothon.Web/wwwroot/css/main.css
@@ -457,6 +457,107 @@ input {
   padding: 6px 0px;
 }
 
+.infos {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: end;
+  flex-grow: 1;
+}
+.infos .info-container {
+  grid-column: 3/3;
+  grid-row: 1/1;
+  border-radius: 12px;
+  border: 1px solid #E0E5EB;
+  background: white;
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.15);
+  pointer-events: auto;
+}
+.infos .filters {
+  width: 340px;
+  grid-column: 3/3;
+  grid-row: 1/1;
+  padding-bottom: 32px;
+}
+.infos .park {
+  width: 460px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-left: -24px;
+  margin-right: 24px;
+}
+.infos .park .header {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.infos .park .header .btn {
+  border-radius: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+.infos .park .menu {
+  display: inline-flex;
+  width: 100%;
+  border-bottom: 2px solid #e0e5eb;
+  margin-top: 16px;
+}
+.infos .park .menu .btn {
+  border-radius: 0;
+  border: none;
+  background-color: transparent;
+  transition: none;
+}
+.infos .park .menu .btn.active {
+  border-bottom: 2px solid #ee1e23;
+  margin-bottom: -2px;
+}
+.infos .park .park-section {
+  display: none;
+  margin-top: 32px;
+}
+.infos .park .park-section.active {
+  display: block;
+}
+.infos .park .park-section.about .image {
+  margin-top: 16px;
+}
+.infos .park .park-section.about .image img {
+  height: 230px;
+  border-radius: 8px;
+}
+.infos .park .park-section.about .coordinates {
+  margin-top: 16px;
+  font-size: 14px;
+}
+.infos .park .park-section.registry .registry-item {
+  display: grid;
+  grid-template-columns: 60px auto;
+  grid-template-rows: auto auto;
+  column-gap: 12px;
+  margin-bottom: 16px;
+}
+.infos .park .park-section.registry .registry-item .registry-item-image {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  border-radius: 6px;
+}
+.infos .park .park-section.registry .registry-item .registry-item-name {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.infos .park .park-section.registry .registry-item .registry-item-specie {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.infos .object {
+  margin-left: -48px;
+  margin-right: 48px;
+  display: none;
+}
+
 #app {
   position: absolute;
   top: 0;
